# rustfs-manager-operator

./: .gitignore  LICENSE  README.md  Taskfile.yml  helmfile.yaml.gotmpl
.github/workflows/: helm-quick-tests.yaml  image-publish.yaml  publish-docs.yaml  publish-helm-chart.yaml  repo-checks.yaml  rust-tests.yaml  test-docs.yaml
.woodpecker/: build-dev-docs-container.yaml  build-tagged-version.yaml  code-checks.yaml  publish-dev-helm-chart.yaml  publish-tagged-helm-chart.yaml  test-helm-charts.yaml
charts/rustfs-instance/: Chart.yaml  values.yaml
charts/rustfs-instance/templates/: _helpers.tpl  intsance.yaml  secret.yaml
charts/rustfs-manager-operator/: Chart.yaml  values.yaml
charts/rustfs-manager-operator-docs/: Chart.yaml  values.yaml
charts/rustfs-manager-operator-docs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/rustfs-manager-operator/crd/: rustfsbuckets.rustfs.badhouseplants.net.yaml  rustfsbucketusers.rustfs.badhouseplants.net.yaml  rustfscustomusers.rustfs.badhouseplants.net.yaml  rustfsinstances.rustfs.badhouseplants.net.yaml
charts/rustfs-manager-operator/templates/: NOTES.txt  _helpers.tpl  cluster_role.yaml  cluster_role_binding.yaml  config.yaml  crds.yaml  deployment.yaml  serviceaccount.yaml
documentation/: Containerfile  pyproject.toml  zensical.toml
documentation/docs/: index.md
operator/: Cargo.toml  Containerfile  Containerfile.test  config.json
operator/src/: cli.rs  conditions.rs  config.rs  controller.rs  main.rs  rc.rs
operator/src/api/: mod.rs  v1beta1_rustfs_bucket.rs  v1beta1_rustfs_bucket_user.rs  v1beta1_rustfs_custom_user.rs  v1beta1_rustfs_instance.rs
operator/src/controllers/: mod.rs  rustfs_bucket.rs  rustfs_bucket_user.rs  rustfs_custom_user.rs  rustfs_instance.rs
scripts/: set_image_metadata
tests/charts/rustfs-operator-test/: Chart.yaml  values.yaml
tests/charts/rustfs-operator-test/templates/: NOTES.txt  _helpers.tpl  rustfsinstance.yaml  serviceaccount.yaml
tests/charts/rustfs-operator-test/templates/tests/: test-connection.yaml
