[project]
name = "documentation"
version = "0.1.4"
description = ""
authors = [
    {name = "Nikolai Rodionov",email = "iam@allanger.xyz"}
]
license = {text = "GPL 3.0"}
requires-python = ">=3.14"
dependencies = [
    "zensical (>=0.0.36,<0.0.37)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
