[package]
name = "rustfs-manager-operator"
version = "0.1.4"
edition = "2024"
default-bin = "controller"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
darling = "0.23.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1.44"
anyhow = "1.0.102"
futures = "0.3.32"
actix-web = "4.13.0"
rand = "0.10.0"
tempfile = "3.27.0"
password-hash = "0.6.0"
sha-crypt = "0.5.0"
argon2 = "0.5.3"
handlebars = "6.4.0"
kube = { version = "3.0.1", features = ["runtime", "derive", "client", "aws-lc-rs"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
envtest = "0.1.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
